--- a/app/src/main/res/layout/homeview.xml
+++ b/app/src/main/res/layout/homeview.xml
@@ -2,8 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
+
+    <ImageView
+        android:id="@+id/click"
+        android:layout_width="411dp"
+        android:layout_height="67dp"
+
+        app:srcCompat="?attr/selectableItemBackgroundBorderless" />
+
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
@@ -37,15 +46,27 @@
         app:layout_constraintTop_toBottomOf="@+id/home_name"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintBottom_toBottomOf="parent" />
+
     <ImageView
+        android:id="@+id/deleteHome"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        app:srcCompat="@android:drawable/arrow_down_float"
-        android:id="@+id/homeSelection"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/quitHome"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/delete" />
+
+    <ImageView
+        android:id="@+id/quitHome"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/home_name"
+        app:layout_constraintBottom_toBottomOf="@+id/home_id"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/home_id" />
+        app:layout_constraintTop_toTopOf="@+id/home_name"
+        app:srcCompat="@drawable/quit"
+        tools:ignore="ImageContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
