--- a/app/src/main/res/layout/user_createhome.xml
+++ b/app/src/main/res/layout/user_createhome.xml
@@ -3,58 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <EditText
         android:id="@+id/ed_homename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_family_restroom_24"
+        android:drawablePadding="20dp"
         android:hint="請輸入家庭名稱"
         android:inputType="textPersonName"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/ed_homeid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="請輸入ID"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/ed_homename"
-        app:layout_constraintTop_toBottomOf="@+id/ed_homename" />
 
     <Button
         android:id="@+id/newhome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="48dp"
         android:text="新增"
-        app:layout_constraintStart_toStartOf="@+id/ed_homeid"
-        app:layout_constraintTop_toBottomOf="@+id/ed_homeid" />
+        app:layout_constraintStart_toStartOf="@+id/ed_homename"
+        app:layout_constraintTop_toBottomOf="@+id/ed_homename" />
 
-    <Button
-        android:id="@+id/backToUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
-        android:text="返回"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/createstatus"
-        android:layout_width="121dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="44dp"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/ed_homename"
-        app:layout_constraintStart_toStartOf="@+id/ed_homename" />
 </androidx.constraintlayout.widget.ConstraintLayout>
